themes/aster/assets/scss/_basic.scss
/*
*	Template Name: Aster
*	Author: bslthemes
*	Author URL: http://themeforest.net/user/bslthemes
*	Copyright © Aster by bslthemes. All Rights Reserved.
*/

/**
* Base Styles
**/

* {
	outline: none;
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
}

::-webkit-input-placeholder {
	color: rgba(255, 255, 255, 0.5);
}

::-moz-placeholder {
	color: rgba(255, 255, 255, 0.5);
}

:-moz-placeholder {
	color: rgba(255, 255, 255, 0.5);
}

:-ms-input-placeholder {
	color: rgba(255, 255, 255, 0.5);
}

html,
body {
	margin: 0;
	padding: 0;
	height: auto !important;
	background: $default_bg;
	font-size: $default_size;
	color: $text_color;
	font-family: $default_font, sans-serif;
	font-weight: $font_weight;
	line-height: $line_height;
	-webkit-font-smoothing: antialiased;
	-webkit-text-size-adjust: 100%;
}

body.no-scroll {
	overflow: hidden;
}

a {
	color: $active_color;
	text-decoration: none;
	cursor: pointer;
}

a:link {
	color: $active_color;
}

a:active {
	color: $active_color;
}

a:visited {
	color: $active_color;
}

a:hover {
	text-decoration: underline;
}

a img {
	border: none;
}

img {
	max-width: 100%;
}

input,
textarea,
button {
	font-family: $default_font;
}

label {
	cursor: pointer;
}

iframe {
	max-width: 100%;
}

.comment-form-cookies-consent input {
	margin-right: 10px;
	position: relative;
	top: 7px;
}

.comment-form-cookies-consent label {
	display: inline-block;
	vertical-align: top;
}

.clear {
	clear: both;
}

strong {
	font-weight: 700;
}

.canvas {
	pointer-events: none;
}

.canvas canvas {
	display: block;
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	-o-object-fit: cover;
	object-fit: cover;
}


/* - Typography */

h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: 900;
	margin: 0;
	margin-top: 30px;
	margin-bottom: 30px;
	color: $default_color;
	line-height: 1.3;
}

h1 {
	font-size: $title_h1_size;
}

h2 {
	font-size: $title_h2_size;
}

h3 {
	font-size: $title_h3_size;
}

h4 {
	font-size: $title_h4_size;
}

h5 {
	font-size: $title_h5_size;
}

h6 {
	font-size: $title_h6_size;
}

.h2-title-size {
	font-size: 64px!important;
}

p {
	padding: 0;
	margin: 30px 0;
}

strong {
	font-weight: 700;
}

@media screen and (max-width: 720px) {
	h1 {
		font-size: 30px;
	}
	.h2-title-size {
		font-size: 40px!important;
	}
	h2 {
		font-size: 25px;
	}
	h3 {
		font-size: 20px;
	}
	h4 {
		font-size: 19px;
	}
	h5 {
		font-size: 16px;
	}
	h6 {
		font-size: 14px;
	}
}

.swiper-button-prev.swiper-button-disabled, .swiper-button-next.swiper-button-disabled {
	opacity: 0.1;
}

a {
	color: $default_color;
	text-decoration: underline;
	outline: none;
}

a:hover {
	text-decoration: none;
	color: $active_color;
}

a.btn,
.btn,
a.btn-link,
.btn-link,
button,
input[type="submit"] {
	padding: 0 50px;
	position: relative;
	overflow: hidden;
	display: inline-block;
	vertical-align: top;
	font-size: $btn_size;
	color: $default_color;
	font-weight: 700;
	height: 56px;
	line-height: 52px;
	text-align: center;
	text-decoration: none;
	border: 2px solid $active_color;
	outline: none!important;
	box-shadow: none!important;
	cursor: pointer;
	border-radius: 0;
	-webkit-border-radius: 0;
	transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
}

.readmore .btn-link {
	padding: 0 30px;
	height: 52px;
	line-height: 48px;
}

input[type="submit"] {
	background-color: $active_color;
}

a.btn:before,
.btn:before,
a.btn-link:before,
.btn-link:before,
button:before {
	content: '';
	position: absolute;
	left: -10%;
	top: -50%;
	width: 120%;
	height: 120%;
	background: $active_color;
	transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	transform: translate3d(0, -100%, 0) skew(-10deg, -10deg);
	-webkit-transform: translate3d(0, -100%, 0) skew(-10deg, -10deg);
	z-index: -1;
}

a.btn:hover,
.btn:hover,
a.btn-link:hover,
.btn-link:hover {
	color: $default_color;
}

a.btn:hover:before,
.btn:hover:before,
a.btn-link:hover:before,
.btn-link:hover:before {
	top: -20%;
	transform: translate3d(0, 0, 0) skew(0deg);
	-webkit-transform: translate3d(0, 0, 0) skew(0deg);
}

input[type="text"],
input[type="email"],
input[type="search"],
input[type="password"],
input[type="tel"],
input[type="address"],
input[type="number"],
textarea {
	position: relative;
	padding: 0 20px;
	display: block;
	width: 100%;
	height: 56px;
	font-family: $default_font;
	font-size: $default_size;
	color: $default_color;
	resize: none;
	outline: 0;
	background: none;
	border: 1px solid #494949;
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	-khtml-border-radius: 0;
	transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-moz-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-webkit-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
	-o-transition: all 0.7s cubic-bezier(0.3, 0, 0.3, 1);
}

input:focus,
textarea:focus {
	border-color: $default_color;
	color: $default_color;
}

textarea {
	height: 158px;
	padding-top: 15px;
	padding-bottom: 15px;
	resize: none;
}

label,
legend {
	display: block;
	padding-bottom: 10px;
	font-family: $default_font;
	font-size: $default_size;
}

fieldset {
	border-width: 0;
	padding: 0;
}

input[type="checkbox"],
input[type="radio"] {
	display: inline;
}

label.error {
	padding-top: 5px;
	font-family: $default_font;
	font-size: 14px;
	color: red;
	display: none;
}

ul {
	list-style: disc;
	margin-top: 30px;
	margin-bottom: 30px;
	padding-left: 0px;
	list-style-position: inside;
}

ol {
	list-style: decimal;
	margin-top: 30px;
	margin-bottom: 30px;
	padding-left: 0px;
	list-style-position: inside;
}

ul ul,
ol ol,
ul ol,
ol ul {
	margin-top: 15px;
	margin-bottom: 15px;
	margin-left: 15px;
}

code {
	padding: 0 4px;
	font-size: 14px;
	font-style: italic;
	text-decoration: none;
	display: inline-block;
	vertical-align: middle;
	overflow: auto;
	max-width: 100%;
	white-space: nowrap;
}
/* ... */

